# ox

./: .gitconfig  .gitignore  Makefile  default.nix  ox.sh  result-2  result-3  result-4  simple.nix
cli/: ox
core/: ChangeLog.md  Main.hs  cabal.nix  core.nix  default.nix  ox-core.cabal  ox-core.cabal.nix
docs/: core.md  dev.md
haskell/: ChangeLog.md  Main.hs  haskell.nix  ox-haskell.cabal
haskell-impurity/: Main.hs  haskell-impurity.nix
hs/: Main.hs  cabal.nix
lib/: ChangeLog.md  LICENSE  Util.hs  ox-lib.cabal
ox/: commentToken.c602fdae6c0cb90de319ab7b2a2c2c52b46891936f77150d478579476126a7b0.hs  line.7f42ecf7089e877e137a4d8bab4f3e72158671a198d81f55ef8a6694318e8c78.hs  oxHash.41f3dd81ad49a76616afeca53570713522218bee8f562ce26e6aec4b60edfa7c.hs  oxModule.96fbf03b0db2615442ebebbc8d364568f4bb5715314c360c1dfe4ad177ba7846.hs  oxModule.b7a00fa696fcef772655d362ae3453e0badff869b84f961c13230172fd7cb933.hs
oxlib/: Ox032615f6f9c4ddfd9160cd9efa53166e0df04a86d7ea36d632bc57cb3520d86f.hs  Ox11a48ea0be8b0a1cfc9b58e2241cadd8e3106ab19e78cf0bf1e86ae787ec9b3d.hs  Ox1cb05558db7e795771f81d06051ecfecf204778ea709f34695d06de9e9284cfe.hs  Ox23519fe8a95c0a57286224ed219db813cbe08a2be70be7813ebf471018948947.hs  Ox3b77d75c1d53661a23e70c4aea089ebd2206074c794a8863f2c039255144f45e.hs  Ox41f3dd81ad49a76616afeca53570713522218bee8f562ce26e6aec4b60edfa7c.hs  Ox643243be8c2037b1d710ac8ea76680035d683db693496ad787165191088be82f.hs  Ox669552b229f9bae85eeb5e089092ee70932c4ebb8bddfd9dff32152dbc9ba678.hs  Ox7f42ecf7089e877e137a4d8bab4f3e72158671a198d81f55ef8a6694318e8c78.hs  cabal.nix  oxlib.nix  (+13 more)
(+1 files in other folders)
