name:                ox-lib
version:             0.0.1
license:             BSD3
license-file:        LICENSE
author:              Jesus E. Larios Murillo
maintainer:          preparedfortherain@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Util
  build-depends:       base -any, regex-pcre -any, containers -any, directory -any, bytestring -any, cryptohash -any, base16-bytestring -any, filepath -any
  default-language:    Haskell2010
